[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/InGameOptions.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Inter/Inter-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Inter/Inter-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sprites/red_button_normal.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Inter/Inter-Black.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Sprites/red_cross.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/check_background.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/white-square.jpg" type="Texture" id=8]
[ext_resource path="res://Assets/Fonts/Inter/Inter-SemiBold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Sprites/Menu/volumen barra blanca.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Menu/volumen Pelotita.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 76
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="Theme" id=10]

[sub_resource type="StyleBoxTexture" id=11]
region_rect = Rect2( 0, 0, 510, 15 )

[sub_resource type="StyleBoxTexture" id=14]
region_rect = Rect2( 0, 0, 510, 39 )

[sub_resource type="StyleBoxTexture" id=13]
content_margin_top = 12.0
content_margin_bottom = 12.0
region_rect = Rect2( 0, 0, 474, 15 )
axis_stretch_vertical = 2

[sub_resource type="DynamicFont" id=15]
size = 36
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 15 )

[node name="InGameOptions" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1920, 1080 )
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 710.0
margin_right = 1210.0
margin_bottom = 1080.0
rect_min_size = Vector2( 500, 1080 )

[node name="Spacer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2

[node name="Options" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 500.0
margin_bottom = 206.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OPTIONS"
align = 1

[node name="Spacer6" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 500.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2

[node name="Difficulty" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 500.0
margin_bottom = 323.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dificultad"
align = 1

[node name="Spacer1" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 327.0
margin_right = 500.0
margin_bottom = 377.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 381.0
margin_right = 500.0
margin_bottom = 529.0

[node name="HSpacer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 148.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 485.0
margin_bottom = 148.0
columns = 3

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/GridContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 173.0
margin_bottom = 49.0
theme = SubResource( 7 )
text = "Opcion 1"

[node name="HSpacer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 177.0
margin_right = 277.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 0 )

[node name="TextureButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 281.0
margin_right = 381.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="VSpacer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_top = 54.0
margin_right = 173.0
margin_bottom = 94.0
rect_min_size = Vector2( 100, 40 )

[node name="DummySpacer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 177.0
margin_top = 54.0
margin_right = 277.0
margin_bottom = 94.0
rect_min_size = Vector2( 100, 20 )

[node name="DummySpacer2" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 281.0
margin_top = 54.0
margin_right = 381.0
margin_bottom = 94.0
rect_min_size = Vector2( 100, 20 )

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/GridContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 98.0
margin_right = 173.0
margin_bottom = 147.0
theme = SubResource( 7 )
text = "Opcion 2"

[node name="HSpacer2" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 177.0
margin_top = 98.0
margin_right = 277.0
margin_bottom = 148.0

[node name="TextureButton2" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 281.0
margin_top = 98.0
margin_right = 381.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 50 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="Spacer3" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 533.0
margin_right = 500.0
margin_bottom = 583.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2

[node name="Volume" type="Label" parent="CenterContainer/VBoxContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 587.0
margin_right = 500.0
margin_bottom = 680.0
theme = SubResource( 9 )
text = "Volume"
align = 1

[node name="Spacer4" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 684.0
margin_right = 500.0
margin_bottom = 734.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2

[node name="Slider" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_top = 738.0
margin_right = 500.0
margin_bottom = 777.0
rect_min_size = Vector2( 0, 39 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/VBoxContainer/Slider"]
margin_right = 500.0
margin_bottom = 39.0
rect_min_size = Vector2( 500, 15 )
theme = SubResource( 10 )
custom_icons/grabber_highlight = ExtResource( 11 )
custom_icons/grabber = ExtResource( 11 )
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 14 )
custom_styles/grabber_area = SubResource( 13 )
max_value = 1.0
step = 0.05
value = 1.0

[node name="Spacer5" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 781.0
margin_right = 500.0
margin_bottom = 831.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 835.0
margin_right = 500.0
margin_bottom = 884.0

[node name="Back" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 155.0
margin_right = 345.0
margin_bottom = 49.0
rect_min_size = Vector2( 190, 49 )
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/Back"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 190, 49 )
theme = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Atras"
align = 1
valign = 1

[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Slider/HSlider" to="." method="_on_HSlider_mouse_exited"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/Slider/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/Back" to="." method="_on_Back_pressed"]
